# chkrs

./: README.md  bun.lockb  next.config.mjs  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/benches/: bitvec.rs
src-tauri/bindings/: BoardState.ts  Move.ts  Player.ts  Tile.ts
src-tauri/src/: agent.rs  board.rs  commands.rs  conversion.rs  lib.rs  main.rs  public.rs
src-tauri/src/agent/: mcts_hash.rs
src-tauri/src/board/: fast.rs  slow.rs
src/app/: api.ts  game.tsx  page.tsx  types.ts
